fixed divider spacing issue in subtitles for mobile

--- a/src/components/SelectedMediaInfo/SelectedMediaInfo.scss
+++ b/src/components/SelectedMediaInfo/SelectedMediaInfo.scss
@@ -49,7 +49,7 @@
     flex-direction: row;
     justify-content: space-between;
     border-bottom: $divider;
-
+    padding-top: 1rem;
     margin-block-start: 0px;
     margin-block-end: 0;
 
